--- a/MapExplorer-macOS/Sources/Controllers/TimelineViewController/Views/TimelineFlagView.xib
+++ b/MapExplorer-macOS/Sources/Controllers/TimelineViewController/Views/TimelineFlagView.xib
@@ -11,6 +11,8 @@
                 <outlet property="flagHeightConstraint" destination="51H-6b-8Qy" id="ccC-mF-ZrY"/>
                 <outlet property="flagPoleView" destination="5if-Jx-5sp" id="656-0J-5wB"/>
                 <outlet property="flagView" destination="SSB-xo-nqZ" id="O80-tb-VOs"/>
+                <outlet property="mediaImageHeightConstraint" destination="Jdk-WL-rpp" id="tPc-Ed-Sta"/>
+                <outlet property="mediaImageView" destination="Vku-M5-RiQ" id="ki0-gd-nqd"/>
                 <outlet property="titleTextField" destination="31b-mQ-r5m" id="I8I-fh-19C"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
@@ -18,26 +20,24 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="216"/>
+            <rect key="frame" x="0.0" y="0.0" width="480" height="346"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="5if-Jx-5sp">
-                    <rect key="frame" x="0.0" y="0.0" width="2" height="216"/>
+                    <rect key="frame" x="0.0" y="0.0" width="2" height="346"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="2" id="FVX-3p-fjV"/>
                     </constraints>
                 </customView>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="SSB-xo-nqZ">
-                    <rect key="frame" x="2" y="116" width="478" height="100"/>
+                    <rect key="frame" x="2" y="146" width="478" height="200"/>
                     <subviews>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="31b-mQ-r5m">
-                            <rect key="frame" x="8" y="28" width="462" height="68"/>
-                            <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Title" id="R29-Bs-Ugc">
-                                <font key="font" metaFont="system"/>
-                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                            </textFieldCell>
-                        </textField>
+                        <customView translatesAutoresizingMaskIntoConstraints="NO" id="Vku-M5-RiQ" customClass="ImageView" customModule="MapExplorer_macOS" customModuleProvider="target">
+                            <rect key="frame" x="2" y="100" width="474" height="98"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="98" id="Jdk-WL-rpp"/>
+                            </constraints>
+                        </customView>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="odF-J1-sQS">
                             <rect key="frame" x="8" y="4" width="462" height="20"/>
                             <constraints>
@@ -49,28 +49,39 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="31b-mQ-r5m">
+                            <rect key="frame" x="8" y="28" width="462" height="68"/>
+                            <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Title" id="R29-Bs-Ugc">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
                     </subviews>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="31b-mQ-r5m" secondAttribute="trailing" constant="10" id="33e-hA-oHB"/>
                         <constraint firstItem="31b-mQ-r5m" firstAttribute="leading" secondItem="SSB-xo-nqZ" secondAttribute="leading" constant="10" id="3mY-zs-LTV"/>
-                        <constraint firstAttribute="height" constant="100" id="51H-6b-8Qy"/>
+                        <constraint firstAttribute="height" constant="200" id="51H-6b-8Qy"/>
                         <constraint firstAttribute="bottom" secondItem="odF-J1-sQS" secondAttribute="bottom" constant="4" id="Bas-R7-TVP"/>
                         <constraint firstItem="odF-J1-sQS" firstAttribute="leading" secondItem="SSB-xo-nqZ" secondAttribute="leading" constant="10" id="JMk-Qk-4al"/>
+                        <constraint firstItem="Vku-M5-RiQ" firstAttribute="top" secondItem="SSB-xo-nqZ" secondAttribute="top" constant="2" id="LEf-g3-wQS"/>
+                        <constraint firstItem="31b-mQ-r5m" firstAttribute="top" secondItem="Vku-M5-RiQ" secondAttribute="bottom" constant="4" id="OFa-U1-Ywj"/>
                         <constraint firstItem="odF-J1-sQS" firstAttribute="top" secondItem="31b-mQ-r5m" secondAttribute="bottom" constant="4" id="ZJU-aX-qyb"/>
-                        <constraint firstItem="31b-mQ-r5m" firstAttribute="top" secondItem="SSB-xo-nqZ" secondAttribute="top" constant="4" id="Zt5-xP-n8e"/>
                         <constraint firstAttribute="trailing" secondItem="odF-J1-sQS" secondAttribute="trailing" constant="10" id="lYJ-87-eJu"/>
+                        <constraint firstAttribute="trailing" secondItem="Vku-M5-RiQ" secondAttribute="trailing" constant="2" id="ojL-db-IbL"/>
                     </constraints>
                 </customView>
             </subviews>
             <constraints>
                 <constraint firstItem="5if-Jx-5sp" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="8fd-FY-dGC"/>
                 <constraint firstItem="SSB-xo-nqZ" firstAttribute="leading" secondItem="5if-Jx-5sp" secondAttribute="trailing" id="T5I-NF-YZy"/>
+                <constraint firstItem="5if-Jx-5sp" firstAttribute="top" secondItem="SSB-xo-nqZ" secondAttribute="top" id="U8G-vt-DWW"/>
+                <constraint firstItem="SSB-xo-nqZ" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="VB3-1u-hCA"/>
                 <constraint firstAttribute="bottom" secondItem="5if-Jx-5sp" secondAttribute="bottom" id="bYt-R5-ctb"/>
-                <constraint firstAttribute="trailing" secondItem="SSB-xo-nqZ" secondAttribute="trailing" id="d7J-zz-g5B"/>
-                <constraint firstItem="5if-Jx-5sp" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="wbi-EW-mQR"/>
-                <constraint firstItem="SSB-xo-nqZ" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="xG5-YB-kGj"/>
+                <constraint firstItem="Vku-M5-RiQ" firstAttribute="leading" secondItem="5if-Jx-5sp" secondAttribute="trailing" constant="2" id="sFv-Pz-kFd"/>
+                <constraint firstAttribute="trailing" secondItem="SSB-xo-nqZ" secondAttribute="trailing" id="zk2-aM-kqJ"/>
             </constraints>
-            <point key="canvasLocation" x="111" y="140"/>
+            <point key="canvasLocation" x="111" y="74"/>
         </customView>
     </objects>
 </document>
